Prevent text overflow in navigable item wrappers

--- a/hify-client/src/assets/main.css
+++ b/hify-client/src/assets/main.css
@@ -19,3 +19,8 @@ body {
     margin: 0;
     padding: 8px;
 }
+
+navigable-item-wrapper {
+    /* Prevent overflows in navigable item wrappers */
+    white-space: nowrap;
+}
